# ruleset-randomizer

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  install.sh  package-lock.json  ruleset-randomizer.service  ruleset_randomizer.service  tailwind.config.js  techniques
migrations/: 001_create_ruleset_table.sql
nginx/conf.d/: ruleset_randomizer.conf
rulesets/: test.yaml
rulesets/weeklies/: 738248.json
src/: main.rs  rules.rs
src/web/: boring.rs  mod.rs  weekly.rs
static/: ruleset.js
techniques/: techniques  techniques.rs.tera
templates/: about.html.tera  base.html.tera  historical_ruleset.html.tera  history.html.tera  ruleset.html.tera  ruleset_interior.html.tera  submit_weights.html.tera  supplemental.html.tera  weekly_ruleset.html.tera
