[package]
name = "ruleset-randomizer"
version = "0.1.0"
edition = "2018"

[dependencies]

rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rand = "0.8"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0.79"
regex = "1"
lazy_static = "1.4.0"

custom_error = "1.9"
chrono = "0.4"

[build-dependencies.tera]
version = "1"
default-features = false